# algorithms-in-SEAL

./: 7_polyeval.cpp  CMakeLists.txt  README.md  header.h  mvproduct.cpp  mvproduct_main.cpp  polyeval.h  polyeval_main.cpp
